@@ -1,5 +1,10 @@
 2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>
 
+	* tree/rewrite.py (remakeExpr, treeMatchApply.operationWrapper) 
+	(flattenAssoc.operation): Factor expression rebuild.
+
+2006-01-17  Martin Soto  <martinsoto@users.sourceforge.net>
+
 	* tree/rewrite.py (treeMatchApply): New apply operation for
 	transformations that only affect a particular node type.
 	(flattenAssoc): Implement based on treeMatchApply.
